TFP-2442 TFP-3712 TFP-1509 TFP-225 TFP-3694 klage og ankefeil og refaktorering