@@ -1,9 +1,6 @@
 package no.nav.foreldrepenger.behandlingskontroll;
 
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 
 import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingStegStatus;
@@ -39,36 +36,17 @@ public enum BehandlingStegResultat {
      */
     FREMOVERFØRT;
 
-    private static final Map<BehandlingStegStatus, BehandlingStegResultat> MAP_STATUS_HANDLING;
-
-    static {
-        Map<BehandlingStegStatus, BehandlingStegResultat> map = new LinkedHashMap<>();
-        // map.put(BehandlingStegStatus.INNGANG, IKKE DEFINERT); // NOSONAR
-        map.put(BehandlingStegStatus.STARTET, BehandlingStegResultat.STARTET);
-        map.put(BehandlingStegStatus.VENTER, BehandlingStegResultat.SETT_PÅ_VENT);
-        // map.put(BehandlingStegStatus.UTGANG, IKKE DEFINERT); // NOSONAR
-        map.put(BehandlingStegStatus.UTFØRT, BehandlingStegResultat.UTFØRT);
-        map.put(BehandlingStegStatus.FREMOVERFØRT, BehandlingStegResultat.FREMOVERFØRT);
-        map.put(BehandlingStegStatus.TILBAKEFØRT, BehandlingStegResultat.TILBAKEFØRT);
-
-        MAP_STATUS_HANDLING = Collections.unmodifiableMap(map);
-    }
+    private static final Map<BehandlingStegResultat, BehandlingStegStatus> MAP_HANDLING_STATUS = Map.ofEntries(
+        Map.entry(BehandlingStegResultat.STARTET, BehandlingStegStatus.STARTET),
+        Map.entry(BehandlingStegResultat.SETT_PÅ_VENT, BehandlingStegStatus.VENTER),
+        Map.entry(BehandlingStegResultat.UTFØRT, BehandlingStegStatus.UTFØRT),
+        Map.entry(BehandlingStegResultat.FREMOVERFØRT, BehandlingStegStatus.FREMOVERFØRT),
+        Map.entry(BehandlingStegResultat.TILBAKEFØRT, BehandlingStegStatus.TILBAKEFØRT)
+    );
 
     static BehandlingStegStatus mapTilStatus(BehandlingStegResultat behandleStegHandling) {
-        Optional<BehandlingStegStatus> findFirst = MAP_STATUS_HANDLING
-            .entrySet()
-            .stream()
-            .filter((entry) -> Objects.equals(entry.getValue(), behandleStegHandling))
-            .map(e -> e.getKey())
-            .findFirst();
-
-        return findFirst
-            .orElseThrow(() -> {
-                return new IllegalArgumentException(
-                    "Utvikler-feil: ukjent mapping fra " + //$NON-NLS-1$
-                        BehandlingStegResultat.class.getSimpleName() + "." //$NON-NLS-1$
-                        + behandleStegHandling);
-            });
+        return Optional.ofNullable(MAP_HANDLING_STATUS.get(behandleStegHandling)).orElseThrow(() ->
+            new IllegalArgumentException("Utvikler-feil: ukjent mapping fra " + BehandlingStegResultat.class.getSimpleName() + "." + behandleStegHandling));
 
     }
 }
